# gw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SKILL.md  demo.tape  pyproject.toml
HomebrewFormula/: gw.rb
src/gw/: __init__.py  __main__.py  auth.py  cli.py  config.py  doctor.py  errors.py  mcp_server.py  output.py  utils.py
src/gw/services/: calendar.py  contacts.py  docs.py  drive.py  gmail.py  sheets.py  tasks.py
tests/: test_auth.py  test_cli.py  test_config.py  test_mcp.py
