[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gw-cli"
version = "0.3.0"
description = "Google Workspace CLI – calendar, gmail, drive, sheets, docs from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Victor Gutierrez", email = "victorgutierrezgomes@gmail.com" }]
keywords = ["google", "workspace", "calendar", "gmail", "drive", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "mcp>=1.26.0",
]

[project.scripts]
gw = "gw.cli:run_cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/gw"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
